--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ redis>=2.10.3
 pymongo==2.8.0
 bcrypt>=1.1.1
 pyyaml>=3.11
-PIL>=1.1.7
+Pillow>=3.2.0
 wheezy.captcha>=0.1.44
 futures>=2.2.0
 xxtea>=0.2.1
